; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_tsleep1.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_tsleep1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsleep1(i8* %0, i32 %1, i8* %2, i32 %3, i32 (i32)* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32 (i32)*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 (i32)* %4, i32 (i32)** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = ptrtoint i8* %11 to i32
  %13 = load i32, i32* %7, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32 (i32)*, i32 (i32)** %10, align 8
  %17 = call i32 @_sleep(i32 %12, i32 %13, i8* %14, i32 %15, i32 (i32)* %16, i32* null)
  ret i32 %17
}

declare dso_local i32 @_sleep(i32, i32, i8*, i32, i32 (i32)*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
